--- a/styles/playground/ProjectCard.module.css
+++ b/styles/playground/ProjectCard.module.css
@@ -10,7 +10,7 @@
 }
 
 .cardImg {
-  filter: drop-shadow(5px 5px 7px rgba(0 0 0 / 20%));
+  filter: drop-shadow(3px 3px 3px rgba(0 0 0 / 7%));
 }
 
 .cardImg img {
