--- a/styles/shared/Buttons.module.css
+++ b/styles/shared/Buttons.module.css
@@ -10,7 +10,7 @@
   min-width: 120px;
   height: 50px;
   padding: 0 10px;
-  box-shadow: 15px 20px 30px -20px rgb(34, 34, 34);
+  box-shadow: 10px 15px 25px -20px rgb(92, 92, 92);
 }
 
 .btn.lg {
