--- a/styles/shared/Footer.module.css
+++ b/styles/shared/Footer.module.css
@@ -11,7 +11,7 @@
 .footer ul {
   display: flex;
   gap: 3rem;
-  padding: 2rem 0;
+  padding: 2rem 0 1rem 0;
 }
 
 .footer img {
@@ -25,8 +25,19 @@
   align-items: center;
 }
 
+.inlineLink {
+  font-weight: var(--bold);
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 2px;
+}
+
+.inlineLink:hover {
+  opacity: 0.9;
+}
+
 .footer small {
-  padding-bottom: 2rem;
+  padding: 1rem 0 2rem 0;
 }
 
 @media screen and (max-width: 600px) {
